jewel-divider: fix divider not showing

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -692,7 +692,6 @@ j|DateField {
 .jewel.divider {
   height: 0;
   margin: 0;
-  border: none;
 }
 
 j|Divider {
